sqlxo/tests/orm/derive/try/err/missing_fromrow.stderr
error[E0277]: the trait bound `for<'r> T: FromRow<'r, PgRow>` is not satisfied
 --> tests/orm/derive/try/err/missing_fromrow.rs:8:12
  |
8 | pub struct T {
  |            ^ unsatisfied trait bound
  |
help: the trait `for<'r> FromRow<'r, PgRow>` is not implemented for `T`
 --> tests/orm/derive/try/err/missing_fromrow.rs:8:1
  |
8 | pub struct T {
  | ^^^^^^^^^^^^
  = help: the following other types implement trait `FromRow<'r, R>`:
            ()
            (T1, T2)
            (T1, T2, T3)
            (T1, T2, T3, T4)
            (T1, T2, T3, T4, T5)
            (T1, T2, T3, T4, T5, T6)
            (T1, T2, T3, T4, T5, T6, T7)
            (T1, T2, T3, T4, T5, T6, T7, T8)
          and $N others
  = note: required for `<T as QueryContext>::Model` to implement `QueryModel`
note: required by a bound in `sqlxo::QueryContext::Model`
 --> $WORKSPACE/sqlxo_traits/src/core.rs
  |
  |     type Model: QueryModel
  |                 ^^^^^^^^^^ required by this bound in `QueryContext::Model`

error[E0277]: the trait bound `for<'r> T: FromRow<'r, PgRow>` is not satisfied
 --> tests/orm/derive/try/err/missing_fromrow.rs:8:12
  |
8 | pub struct T {
  |            ^ unsatisfied trait bound
  |
help: the trait `for<'r> FromRow<'r, PgRow>` is not implemented for `T`
 --> tests/orm/derive/try/err/missing_fromrow.rs:8:1
  |
8 | pub struct T {
  | ^^^^^^^^^^^^
  = help: the following other types implement trait `FromRow<'r, R>`:
            ()
            (T1, T2)
            (T1, T2, T3)
            (T1, T2, T3, T4)
            (T1, T2, T3, T4, T5)
            (T1, T2, T3, T4, T5, T6)
            (T1, T2, T3, T4, T5, T6, T7)
            (T1, T2, T3, T4, T5, T6, T7, T8)
          and $N others
  = note: required for `<TQuery as Filterable>::Entity` to implement `QueryModel`
note: required by a bound in `sqlxo::Filterable::Entity`
 --> $WORKSPACE/sqlxo_traits/src/core.rs
  |
  |     type Entity: QueryModel;
  |                  ^^^^^^^^^^ required by this bound in `Filterable::Entity`

error[E0277]: the trait bound `for<'r> T: FromRow<'r, PgRow>` is not satisfied
 --> tests/orm/derive/try/err/missing_fromrow.rs:8:12
  |
8 | pub struct T {
  |            ^ unsatisfied trait bound
  |
help: the trait `for<'r> FromRow<'r, PgRow>` is not implemented for `T`
 --> tests/orm/derive/try/err/missing_fromrow.rs:8:1
  |
8 | pub struct T {
  | ^^^^^^^^^^^^
  = help: the following other types implement trait `FromRow<'r, R>`:
            ()
            (T1, T2)
            (T1, T2, T3)
            (T1, T2, T3, T4)
            (T1, T2, T3, T4, T5)
            (T1, T2, T3, T4, T5, T6)
            (T1, T2, T3, T4, T5, T6, T7)
            (T1, T2, T3, T4, T5, T6, T7, T8)
          and $N others
  = note: required for `<TSort as Sortable>::Entity` to implement `QueryModel`
note: required by a bound in `sqlxo::Sortable::Entity`
 --> $WORKSPACE/sqlxo_traits/src/core.rs
  |
  |     type Entity: QueryModel;
  |                  ^^^^^^^^^^ required by this bound in `Sortable::Entity`

error[E0277]: the trait bound `for<'r> T: FromRow<'r, PgRow>` is not satisfied
 --> tests/orm/derive/try/err/missing_fromrow.rs:8:12
  |
8 | pub struct T {
  |            ^ unsatisfied trait bound
  |
help: the trait `for<'r> FromRow<'r, PgRow>` is not implemented for `T`
 --> tests/orm/derive/try/err/missing_fromrow.rs:8:1
  |
8 | pub struct T {
  | ^^^^^^^^^^^^
  = help: the following other types implement trait `FromRow<'r, R>`:
            ()
            (T1, T2)
            (T1, T2, T3)
            (T1, T2, T3, T4)
            (T1, T2, T3, T4, T5)
            (T1, T2, T3, T4, T5, T6)
            (T1, T2, T3, T4, T5, T6, T7)
            (T1, T2, T3, T4, T5, T6, T7, T8)
          and $N others
  = note: required for `<Name as sqlxo::Column>::Model` to implement `QueryModel`
note: required by a bound in `sqlxo::Column::Model`
 --> src/select.rs
  |
  |     type Model: QueryModel;
  |                 ^^^^^^^^^^ required by this bound in `Column::Model`
